data/raw_logs/syntactic/syn_25.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_25.c:1:14: error: expected ';', ',' or ')' before 'int'
    1 | void f(int a int b) {}
      |              ^~~
